# platzi-flix

./: README.md
.cursor/rules/: fastapi.mdc
Backend/: .gitignore  Dockerfile  Makefile  README.md  README_SEEDS.md  docker-compose.yml  pyproject.toml
Backend/app/: ALEMBIC_SETUP.md  CLASSES_TO_LECTURES_REVIEW.md  MIGRATION_VALIDATION.md  __init__.py  alembic.ini  main.py
Backend/app/alembic/: env.py
Backend/app/alembic/versions/: 7645eb2d5dc0_initial_migration_create_teachers_.py
Backend/app/core/: config.py
Backend/app/db/: base.py  seed.py
Backend/app/db/models/: __init__.py  course.py  course_teacher.py  lecture.py  teacher.py
Backend/app/services/: __init__.py  course_service.py
Backend/app/tests/: HOW_TO_RUN.md  INTEGRATION_TESTS.md  README.md  REAL_DATA_TESTS.md  REORGANIZATION_SUMMARY.md  SINGLE_TEST_GUIDE.md  TESTING_SUMMARY.md  TESTS_COMPLETE_GUIDE.md  __init__.py  pytest.ini  run_real_data_tests.sh  run_single_test.sh  run_tests.sh  run_tests_by_type.sh  run_tests_with_real_db.sh  test_courses.py  test_courses_real_data.py
Backend/scripts/: init_db.sh  run_seeds.py  seed_only.sh
Backend/specs/: 00_contracts.md  01_setup.md
Frontend/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
Frontend/.cursor/rules/: create-component.mdc  project-structure.mdc  react-components.mdc  scss-patterns.mdc  styling-patterns.mdc  test-file-patterns.mdc  testing-best-practices.mdc  typescript-patterns.mdc  unit-testing.mdc
Frontend/src/app/: layout.tsx  page.module.scss  page.tsx
Frontend/src/components/: Error.tsx  Header.tsx  LecturePlayer.module.scss  LecturePlayer.tsx  Loader.tsx  Sidebar.tsx
Frontend/src/docs/: README.md
Frontend/src/hooks/: useGetCourses.ts  useGetLecture.ts
Frontend/src/styles/: globals.scss  reset.scss  vars.scss
Frontend/src/test/: README.md  example.test.ts  setup.ts  vitest.d.ts
Frontend/src/types/: README.md  api.ts  common.ts  course.ts  index.ts  lecture.ts  teacher.ts
Mobile/PlatziFlixiOS/: .gitignore  buildServer.json
Mobile/PlatziFlixiOS/PlatziFlixiOS/: ContentView.swift  Item.swift  PlatziFlixiOSApp.swift
Mobile/PlatziFlixiOS/PlatziFlixiOS.xcodeproj/: project.pbxproj
Mobile/PlatziFlixiOS/PlatziFlixiOSTests/: PlatziFlixiOSTests.swift
Mobile/PlatziFlixiOS/PlatziFlixiOSUITests/: PlatziFlixiOSUITests.swift  PlatziFlixiOSUITestsLaunchTests.swift
(+29 files in other folders)
